--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,13 @@
       font-family: 'Urbanist', sans-serif;
     }
   </style>
+  <style>
+    .link{
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
+  
   <title>React App</title>
 </head>
 
